Fix issue with text alignment that's cropped up since adding devices.scss

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,3 +7,9 @@
     box-sizing: content-box;
   }
 }
+
+.submit-wrapper
+{
+  text-align: left;
+}
+}
